# MushIO

./: .gitignore  GETTING_STARTED.md  README.md  SPEC.md  _build.bat  _build.ps1  _build_incremental.ps1  _flash_and_launch.ps1  _wait_bootsel_flash.ps1  build_and_launch.bat  deploy_firmware.bat  install.bat  install.sh  launch_gui.bat  launch_gui_demo.bat
archive/: mushio_gui.spec
archive/firmware_micropython/: adc_manager.py  ads124s08.py  bringup.py  cmd_server.py  config.py  demo_adc_manager.py  main.py  main_test.py  streamer.py  stub_adc_manager.py
archive/test/: simulator.py  test_protocol.py
archive/test/data_gui_test/: mushio_elec_20260303_123324.csv  mushio_stim_20260303_123324.csv
archive/test/data_test/: mushio_20260303_121057.csv
archive/test/data_test2/: mushio_elec_20260303_121405.csv  mushio_stim_20260303_121405.csv
firmware_c/: BUILD.md  CMakeLists.txt  adc_manager.c  adc_manager.h  config.h  core1.c  crc16.c  crc16.h  demo_adc.c  demo_adc.h  frame.c  frame.h  lwipopts.h  main.c  ota_server.c  ota_server.h  pio_spi.h  pio_spi.pio  pio_spi.pio.h  ring.h
host/: analyze.py  gui.py  ota_client.py  receiver.py  requirements.txt  spacing_test.py
